<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"

    android:textColor="@color/primaryTextColor"

    android:padding="16dp"
    android:gravity="center">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textColor="@color/primaryTextColor"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/roboto_bold"
        android:hint="@string/enter_your_name"
        android:padding="12dp"
        android:textColorHint="@color/secondaryTextColor" />

    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/primaryTextColor"
        android:fontFamily="@font/roboto_medium"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
