<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/primaryTextColor"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="20sp"
        android:background="@drawable/question_background"
        android:textColor="@color/primaryTextColor"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginBottom="20dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/radio_button_selector" />

        <RadioButton
            android:id="@+id/radioOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/radio_button_selector" />

        <RadioButton
            android:id="@+id/radioOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_3"
            android:textColor="@color/secondaryTextColor"
            android:background="@drawable/radio_button_selector" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/primaryTextColor"
        android:fontFamily="@font/roboto_medium"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
