<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvCongrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="28sp"
        android:textColor="@color/primaryTextColor"
        android:fontFamily="@font/roboto_bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/your_score"
        android:textColor="@color/secondaryTextColor"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_gravity="center"
        android:layout_below="@id/tvScore"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/primaryTextColor"
        android:fontFamily="@font/roboto_medium" />
</RelativeLayout>
